Zero day exploits added

--- a/MasterPage.master
+++ b/MasterPage.master
@@ -319,7 +319,9 @@
                                         </ul>
                                     </li>
 
-                                   
+                                    <li>
+                                        <a href="../../docs/Technology/Hacking/Zero-DayExploits.pdf">Zero Day Exploits</a>
+                                    </li>
 
                                     
                                 </ul>
